--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
+    "ionicons": "^6.1.3",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-view": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
