--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.5",
+    "expo-checkbox": "~2.3.1",
     "expo-status-bar": "~1.4.4",
     "ionicons": "^6.1.3",
     "react": "18.2.0",
