--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@supabase/supabase-js": "^2.10.0",
     "expo": "~48.0.5",
     "expo-checkbox": "~2.3.1",
     "expo-status-bar": "~1.4.4",
@@ -20,7 +22,8 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-safe-area-view": "^1.1.1"
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
